--- a/.env.sample
+++ b/.env.sample
@@ -1,16 +1,16 @@
-# server
-BACKEND_PORT=example_5000
+# APPLICATION 
+APP_PORT=   #example_5000
 
-# database
-DB_HOST=example_localhost
-DB_USER=example_root
-DB_PASSWORD=example_
-DB_NAME=example_bank_system
-DB_PORT=example_3306
+# DATABASE
+DB_HOST=
+DB_USER=
+DB_PASSWORD=
+DB_NAME=
+DB_PORT=
 
-# token
-JWT_SECRET=example_users_wil_be_authenticated_with_this_secret_key_990011
+# TOKEN
+JWT_SECRET=
 
-# environment
-NODE_ENV=example_development
+# ENVIRONMENT
+NODE_ENV=
 
